я добавил тень для фортнайт

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- IMAGE #3 -->
             <div class="item">
                 <h2> Fortnite (Roblox)</h2>
-                <div class="image roblox">
+                <div class="image fortnite">
                     <a href="https://www.roblox.com/games/15448846880/">
                         <img src="img/1695830282_gas-kvas-com-p-kartinki-fortnait-8.jpg" alt="">
                     </a>
@@ -56,7 +56,7 @@
             <!-- IMAGE #4 -->
             <div class="item">
                 <h2>Ks go</h2>
-                <div class="image roblox">
+                <div class="image ks-go">
                     <a href="">
                         <img src="img/1613163588_204-p-zheltii-fon-ks-go-245.png" alt="">
                     </a>
