--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>мой сайт</title>
+    <title>Мой сайт</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
             <a href="https://ossified-package-909.notion.site/b68a8fac3c5b4e3cb1bb907df325d9a0" target="_blank">
                 домашнее задание</a>
-            <a href="https://svetailo.com" target="_blank">сайт учителя</a>
+            <a href="https://svetailo.com" target="_blank">Сайт учителя</a>
 
         </div>
     </header>
